--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Diogo Cezar <diogo@diogocezar.com>",
   "license": "MIT",
   "devDependencies": {
+    "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
